compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_postfix_list_type.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/postfix_list_type.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/types/postfix_list_type.ml:2:19]
 1 │ fn main() {
 2 │   let values: i64 list = [1];
   ·                   ──┬─
   ·                     ╰── expected end of type annotation
 3 │   dbg(list_len(values))
   ╰────
  help: use Riot type syntax like `List<String>` or `i64 -> i64`
